[package]
name = "pico-proving-client"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "main"
path = "bin/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
tonic = { version = "0.13", features = ["zstd"] }

[build-dependencies]
tonic-build = { version = "0.13", features = ["prost"] }
